# unicaf

./: docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/: app.py  db.py  seed.py
backend/src/api/controller/: person_controller.py
backend/src/api/model/: person_model.py
backend/src/api/view/: person_view.py
backend/src/config/: db_config.py
frontend/: Dockerfile  package.json
