[project]
name = "unicaf-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Mionuel",email = "lifevlad2015@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard] (>=0.139.0,<0.140.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
